--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>fromchile</title>
-  <script src="index.js" type="text/javascript" async></script>
+  <title>fromchile</title>  
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/phaser/2.6.1/phaser.min.js"></script>
+  <script src="index.js" type="text/javascript"></script>
 </head>
 <body>
   <div id="game-container">
   </div>
+  
 </body>
 </html>
